[package]
name = "specs-task"
version = "0.2.0"
authors = ["Duncan Fairbanks <fduncan@umich.edu>"]
edition = "2018"

description = "Fork-join multitasking for SPECS ECS"
license = "MIT"
repository = "https://github.com/bonsairobo/specs-task.git"

[dependencies]
log = "0.4.8"
specs = { version = "0.16.0", default-features = false, features = ["shred-derive", "specs-derive"] }
